<resources>
    <string name="app_name">Quiz App</string>

    <string name="number_of_question">4</string>

    <!-- First Question -->
    <string name="question_1_text">In which year did Romania join the European Union?</string>
    <string name="q_1_radio_1_text">2007</string>
    <string name="q_1_radio_2_text">2003</string>
    <string name="q_1_radio_3_text">2009</string>

    <!-- First question answer  -->
    <string name="q_1_answer">2007</string>

    <!-- Second question -->
    <string name="question_2_text">What is the capital of Spain?</string>

    <!-- Second question  answer -->
    <string name="q_2_answer">Madrid</string>


    <!--    Third question -->
    <string name="question_3_text">Romania is a member of ?</string>
    <string name="q_3_checkbox_1_text">NATO</string>
    <string name="q_3_checkbox_2_text">Soviet Union</string>
    <string name="q_3_checkbox_3_text">EU</string>
    <string name="q_3_checkbox_4_text">UK</string>

    <!-- Third answer -->
    <string name="q_3_number_of_answers">2</string>
    <string name="q_3_answer_1">NATO</string>
    <string name="q_3_answer_2">EU</string>

    <!-- Forth question -->
    <string name="question_4_text">Does water boil at 100 degrees celsius?</string>
    <string name="q_4_radio_1_text">Yes</string>
    <string name="q_4_radio_2_text">No</string>

    <!-- Forth answer-->
    <string name="q_4_answer">Yes</string>

</resources>
