<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.alexandru.quizapp.MainActivity">

        <LinearLayout
            android:id="@+id/linear_layout_question_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                style="@style/RelativeLayoutStyle"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">


                <TextView
                    android:id="@+id/text_view_question_1"
                    style="@style/QuestionStyle"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/question_1_text">

                </TextView>

                <RadioGroup
                    android:id="@+id/radio_group_1"
                    style="@style/RadioGroupStyle"
                    android:layout_below="@id/text_view_question_1">

                    <RadioButton
                        android:id="@+id/radio_q_1_answer_1"
                        style="@style/RadioButtonStyle"
                        android:text="@string/q_1_radio_1_text" />

                    <RadioButton
                        android:id="@+id/radio_q_1_answer_2"
                        style="@style/RadioButtonStyle"
                        android:text="@string/q_1_radio_2_text" />

                    <RadioButton
                        android:id="@+id/radio_q_1_answer_3"
                        style="@style/RadioButtonStyle"
                        android:text="@string/q_1_radio_3_text" />

                </RadioGroup>


            </RelativeLayout>

            <RelativeLayout
                style="@style/RelativeLayoutStyle"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/text_view_question_2"
                    style="@style/QuestionStyle"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/question_2_text">

                </TextView>

                <EditText
                    android:id="@+id/edit_text_answer_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_question_2"
                    android:gravity="center_horizontal"
                    android:hint="Answer here" />


            </RelativeLayout>

            <RelativeLayout
                style="@style/RelativeLayoutStyle"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/text_view_question_3"
                    style="@style/QuestionStyle"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/question_3_text">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_question_3"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkbox_q_3_a_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/q_3_checkbox_1_text" />

                    <CheckBox
                        android:id="@+id/checkbox_q_3_a_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/checkbox_q_3_a_1"
                        android:layout_weight="1"
                        android:text="@string/q_3_checkbox_2_text" />

                    <CheckBox
                        android:id="@+id/checkbox_q_3_a_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/checkbox_q_3_a_2"
                        android:layout_weight="1"
                        android:text="@string/q_3_checkbox_3_text" />

                    <CheckBox
                        android:id="@+id/checkbox_q_3_a_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/checkbox_q_3_a_2"
                        android:layout_weight="1"
                        android:text="@string/q_3_checkbox_4_text" />


                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout style="@style/RelativeLayoutStyle">
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"

                <TextView
                    android:id="@+id/text_view_question_4"
                    style="@style/QuestionStyle"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/question_4_text">

                </TextView>

                <RadioGroup
                    style="@style/RadioGroupStyle"
                    android:layout_below="@id/text_view_question_4">

                    <RadioButton
                        android:id="@+id/radio_q_2_answer_1"
                        style="@style/RadioButtonStyle"
                        android:text="@string/q_4_radio_1_text">

                    </RadioButton>

                    <RadioButton
                        android:id="@+id/radio_q_2_answer_2"
                        style="@style/RadioButtonStyle"
                        android:text="@string/q_4_radio_2_text">

                    </RadioButton>


                </RadioGroup>
            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/linear_layout_question_list"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_submit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="submitTest"
                android:text="Submit test" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="reset"
                android:text="Reset score" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>

